orchestrator-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-service
  namespace: apex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator-service
  template:
    metadata:
      name: orchestrator-service
      labels:
        app: orchestrator-service
        version: v1
    spec:
      containers:
      - name: orchestrator-service
        image: parthakonwar/orchestrator-service:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
  namespace: apex
  labels:
    app: orchestrator-service
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: orchestrator-service
