orchestrator-service/k8s/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: canary-gateway
  namespace: apex
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "apex.pk.com"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: orchestrator-service-destination
  namespace: apex
spec:
  host: orchestrator-service
  subsets:
    - name: v1
      labels:
        version: v1
  trafficPolicy:
    tls:
      mode: DISABLE      
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: orchestrator-service-route
  namespace: apex
spec:
  hosts:
    - "apex.pk.com"
  gateways:
    - canary-gateway
  http:
    - route:
        - destination:
            host: orchestrator-service
            subset: v1
#      timeout: 0.5s # - to enable if using Istio fault on callme-service route
